--- a/assignment/index.html
+++ b/assignment/index.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Unit 5, Part 2 - HTML/CSS Practice</title>
-    <link href="main.css" rel="stylesheet">
+    <link href="stylesheet.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Unit 5, Part 2 - HTML/CSS Practice</h1>
-    <p>See console for output.</p>
+    <header>
+      <h1>Unit 5, Part 2 - HTML/CSS Practice</h1>
+      <h2>Fue Lee's Record Shop</h2>
+    </header>
+    <main>
+      <p>See console for output.</p>
     <!-- Create an unordered list with any questions you have -->
+    </main>
   </body>
 </html>
