completed the rest of the style edits per the directions, created classes and used them in place of element names

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -6,11 +6,11 @@
     <link href="stylesheet.css" rel="stylesheet">
   </head>
   <body>
-    <header>
+    <header class="banner">
       <h1>Unit 5, Part 2 - HTML/CSS Practice</h1>
       <h2>Fue Lee's Record Shop</h2>
     </header>
-    <main>
+    <main class="mainInfo">
       <p>See console for output.</p>
     <!-- Create an unordered list with any questions you have -->
     </main>
